--- a/css/hero.css
+++ b/css/hero.css
@@ -5,7 +5,7 @@
   align-items: start;
   height: 100vh;
   padding: 30px;
-  background-image: url("/images/ppp.jpeg");
+  background-image: url("../images/ppp.jpeg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right bottom;
